alignment fixed

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -11,6 +11,7 @@ body{margin-top:20px;
 
 /* Existing styles */
 .search-bar-container {
+  margin-top: 20px;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 4px; /* Slightly rounded corners for Bootstrap 3 */
@@ -39,21 +40,24 @@ body{margin-top:20px;
 }
 
 .search-result-categories>li>a>.glyphicon {
-  margin-right: 5px
+  margin-right: 100px
 }
 
 .search-result-categories>li>a>.badge {
-  float: right
+  float: left;
 }
 
 .search-results-count {
-  margin-top: 10px
+  margin-top: 10px;
+  margin-left: 20px
+
 }
 
 .search-result-item {
   padding: 20px;
   background-color: #fff;
-  border-radius: 8px
+  border-radius: 8px;
+  margin-left: 20px;
 }
 
 .search-result-item:after,
@@ -79,7 +83,7 @@ body{margin-top:20px;
     display: inline-block;
     margin: -20px 0 -20px -20px;
     float: left;
-    width: 200px
+    width: 300px
   }
 }
 
